--- a/UI/StoryBoard/src/app/presentation-page/presentation-page.component.html
+++ b/UI/StoryBoard/src/app/presentation-page/presentation-page.component.html
@@ -3,8 +3,8 @@
         <p class="title">StoryBoard</p>
         <div>
             <div class="Btns_in_up">
-                <button (click)="openDialogLogin()"><a>Sing In</a></button>
-                <button (click)="openDialogRegister()"><a>Sing Up</a></button>
+                <button (click)="openDialogLogin()"><a>Entrar</a></button>
+                <button (click)="openDialogRegister()"><a>Registrar</a></button>
             </div>
         </div>
     </div>
