--- a/UI/StoryBoard/src/app/presentation-page/presentation-page.component.scss
+++ b/UI/StoryBoard/src/app/presentation-page/presentation-page.component.scss
@@ -28,7 +28,7 @@
         font-family:'Trebuchet MS';
         gap: 1rem;
         button{
-            background-color: #000000;
+            background-color: #1e1a3a;
             border-radius: 5px;
             border: none;
             height: 3em;
