--- a/UI/StoryBoard/src/app/project-work-page/components/sprint-status-dash/sprint-status-dash.scss
+++ b/UI/StoryBoard/src/app/project-work-page/components/sprint-status-dash/sprint-status-dash.scss
@@ -2,3 +2,17 @@
     width: 80vw;
     height: 80vh;
 }
+
+@media only screen and (max-width: 767px) {
+    .chart-container {
+        display: flex;
+        align-items: center;
+        width: 80vw;
+        height: 80vh;
+    }
+
+    #myChart{
+        width: 80vw;
+        height: 80vh;
+    }
+}
