--- a/UI/StoryBoard/src/app/project-work-page/components/story-list/story-list.component.html
+++ b/UI/StoryBoard/src/app/project-work-page/components/story-list/story-list.component.html
@@ -10,103 +10,106 @@
             delete
         </mat-icon>
     </mat-expansion-panel-header>
-
-    <div class="example-container">
-        <h2>To do</h2>
-        
-        <div
-            id="todo"
-            cdkDropList
-            #todoList="cdkDropList"
-            [cdkDropListData]="todo"
-            [cdkDropListConnectedTo]="[inProgessList, doneList, todoList]"
-            class="example-list"
-            (cdkDropListDropped)="drop($event)">
-            <div class="example-box" *ngFor="let item of todo" cdkDrag>
-                <div class="d-flex flex-row justify-content-between">
-                    <span><strong>{{item.name}}</strong></span>
-                    <mat-icon class="delete" [matMenuTriggerFor]="menut">more_vert</mat-icon>
-
-                    <mat-menu #menut="matMenu">
-                        <button mat-menu-item (click)="openEditTask(item)">
-                          <mat-icon>edit</mat-icon>
-                          <span>Editar</span>
-                        </button>
-                        <button mat-menu-item (click)="delete(item.id)">
-                          <mat-icon>delete</mat-icon>
-                          <span>Deletar</span>
-                        </button>
-                    </mat-menu>
+    <div class="content">
+        <div class="example-container">
+            <h2>To do</h2>
+            
+            <div
+                id="todo"
+                cdkDropList
+                #todoList="cdkDropList"
+                [cdkDropListData]="todo"
+                [cdkDropListConnectedTo]="[inProgessList, doneList, todoList]"
+                class="example-list"
+                (cdkDropListDropped)="drop($event)">
+                <div class="example-box" *ngFor="let item of todo" cdkDrag>
+                    <div class="d-flex flex-row justify-content-between">
+                        <span><strong>{{item.name}}</strong></span>
+                        <mat-icon class="delete" [matMenuTriggerFor]="menut">more_vert</mat-icon>
+    
+                        <mat-menu #menut="matMenu">
+                            <button mat-menu-item (click)="openEditTask(item)">
+                              <mat-icon>edit</mat-icon>
+                              <span>Editar</span>
+                            </button>
+                            <button mat-menu-item (click)="delete(item.id)">
+                              <mat-icon>delete</mat-icon>
+                              <span>Deletar</span>
+                            </button>
+                        </mat-menu>
+                    </div>
+                    <span>{{item.durationTime}}h</span>
                 </div>
-                <span>{{item.durationTime}}h</span>
+            </div>
+        </div>
+    
+        <div class="example-container">
+            <h2>In progress</h2>
+            
+            <div
+                id="inprogress"
+                cdkDropList
+                #inProgessList="cdkDropList"
+                [cdkDropListData]="inProgress"
+                [cdkDropListConnectedTo]="[inProgessList, doneList, todoList]"
+                class="example-list"
+                (cdkDropListDropped)="drop($event)">
+                <div class="example-box" *ngFor="let item of inProgress" cdkDrag>
+                    <div class="d-flex flex-row justify-content-between">
+                        <span><strong>{{item.name}}</strong></span>
+                        <mat-icon class="delete" [matMenuTriggerFor]="menui">more_vert</mat-icon>
+    
+                        <mat-menu #menui="matMenu">
+                            <button mat-menu-item (click)="openEditTask(item)">
+                              <mat-icon>edit</mat-icon>
+                              <span>Editar</span>
+                            </button>
+                            <button mat-menu-item (click)="delete(item.id)">
+                              <mat-icon>delete</mat-icon>
+                              <span>Deletar</span>
+                            </button>
+                        </mat-menu>
+                    </div>
+                    <span>{{item.durationTime}}h</span>
+                </div>
+            </div>
+        </div>
+            
+        <div class="example-container">
+            <h2>Done</h2>
+            
+            <div
+                id="done"
+                cdkDropList
+                #doneList="cdkDropList"
+                [cdkDropListData]="done"
+                [cdkDropListConnectedTo]="[inProgessList, doneList, todoList]"
+                class="example-list"
+                (cdkDropListDropped)="drop($event)">
+                <div class="example-box" *ngFor="let item of done" cdkDrag>
+                    <div class="d-flex flex-row justify-content-between bold">
+                        <span><strong>{{item.name}}</strong></span>
+                        <mat-icon class="delete" [matMenuTriggerFor]="menud">more_vert</mat-icon>
+    
+                        <mat-menu #menud="matMenu">
+                            <button mat-menu-item (click)="openEditTask(item)">
+                              <mat-icon>edit</mat-icon>
+                              <span>Editar</span>
+                            </button>
+                            <button mat-menu-item (click)="delete(item.id)">
+                              <mat-icon>delete</mat-icon>
+                              <span>Deletar</span>
+                            </button>
+                        </mat-menu>
+                    </div>
+                    <!-- (click)="delete(item.id)" -->
+                    <span>{{item.durationTime}}h</span>
+                </div>
             </div>
         </div>
     </div>
 
-    <div class="example-container">
-        <h2>In progress</h2>
-        
-        <div
-            id="inprogress"
-            cdkDropList
-            #inProgessList="cdkDropList"
-            [cdkDropListData]="inProgress"
-            [cdkDropListConnectedTo]="[inProgessList, doneList, todoList]"
-            class="example-list"
-            (cdkDropListDropped)="drop($event)">
-            <div class="example-box" *ngFor="let item of inProgress" cdkDrag>
-                <div class="d-flex flex-row justify-content-between">
-                    <span><strong>{{item.name}}</strong></span>
-                    <mat-icon class="delete" [matMenuTriggerFor]="menui">more_vert</mat-icon>
-
-                    <mat-menu #menui="matMenu">
-                        <button mat-menu-item (click)="openEditTask(item)">
-                          <mat-icon>edit</mat-icon>
-                          <span>Editar</span>
-                        </button>
-                        <button mat-menu-item (click)="delete(item.id)">
-                          <mat-icon>delete</mat-icon>
-                          <span>Deletar</span>
-                        </button>
-                    </mat-menu>
-                </div>
-                <span>{{item.durationTime}}h</span>
-            </div>
-        </div>
-    </div>
-        
-    <div class="example-container">
-        <h2>Done</h2>
-        
-        <div
-            id="done"
-            cdkDropList
-            #doneList="cdkDropList"
-            [cdkDropListData]="done"
-            [cdkDropListConnectedTo]="[inProgessList, doneList, todoList]"
-            class="example-list"
-            (cdkDropListDropped)="drop($event)">
-            <div class="example-box" *ngFor="let item of done" cdkDrag>
-                <div class="d-flex flex-row justify-content-between bold">
-                    <span><strong>{{item.name}}</strong></span>
-                    <mat-icon class="delete" [matMenuTriggerFor]="menud">more_vert</mat-icon>
-
-                    <mat-menu #menud="matMenu">
-                        <button mat-menu-item (click)="openEditTask(item)">
-                          <mat-icon>edit</mat-icon>
-                          <span>Editar</span>
-                        </button>
-                        <button mat-menu-item (click)="delete(item.id)">
-                          <mat-icon>delete</mat-icon>
-                          <span>Deletar</span>
-                        </button>
-                    </mat-menu>
-                </div>
-                <!-- (click)="delete(item.id)" -->
-                <span>{{item.durationTime}}h</span>
-            </div>
-        </div>
-    </div>
+    
     <div class="buttonTop">
         <button (click)="openDialogTask()" ><a>Adicionar Task</a></button>
     </div>
