--- a/UI/StoryBoard/src/app/initial-page/initial-page.component.html
+++ b/UI/StoryBoard/src/app/initial-page/initial-page.component.html
@@ -22,6 +22,24 @@
                 </ng-container>
             </div>
         </div>
+        <br>
+        <br>
+        <div class="rows">
+            <p class="title">Seus projetos em time</p>
+            <br>
+            <div class="rowContent" *ngIf="(queryCommandTeamProjects | async)?.length !== 0">
+
+                <div class="itemContainer" *ngFor="let proj of queryCommandTeamProjects | async"(click)="GoToProject(proj.project.id)">
+                    <div class="imgItem">
+                        <img src="{{proj.project.urlImage}}">
+                    </div>
+                    <p>{{proj.project.name}}</p>
+                </div>
+            </div>
+            <ng-container *ngIf="(queryCommandTeamProjects | async)?.length === 0">
+                <p>PARECE QUE VOCE NÃO TEM AMIGOS :,(</p>
+            </ng-container>
+        </div>
     </div>
 </div>
     <!-- 
