--- a/UI/StoryBoard/src/app/project-work-page/components/story-list/story-list.component.html
+++ b/UI/StoryBoard/src/app/project-work-page/components/story-list/story-list.component.html
@@ -6,7 +6,7 @@
         <mat-icon>
             arrow_drop_down
         </mat-icon>
-        <mat-icon class="delete" (click)="deleteStory()">
+        <mat-icon class="delete" (click)="deleteStory($event)">
             delete
         </mat-icon>
     </mat-expansion-panel-header>
